manuela/components/apps/iot-frontend/base/iot-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: iot-frontend
    template: openjdk18-web-basic-s2i
    app.kubernetes.io/part-of: manuela
  name: iot-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deploymentconfig: iot-frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: iot-frontend
        deploymentconfig: iot-frontend
      name: iot-frontend
    spec:
      containers:
      - name: iot-frontend
        image: iot-frontend:latest
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        # the following mountpath is used for images which are based on the HTTPD base images, i.e. built using the CI/CD pipelines
        - mountPath: /var/www/html/conf/config.json
          name: iot-frontend-configmap-vol
          subPath: config.json
        # the following mountpath is used for images based directly on the NodeJS builder image, i.e. when deploying images built in the iotdemo namespace during quickstart
        - mountPath: /opt/app-root/output/conf/config.json
          name: iot-frontend-configmap-vol
          subPath: config.json
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /home
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: iot-frontend-configmap-vol
        configMap:
          defaultMode: 438
          name: iot-frontend-configmap
