manuela/components/apps/iot-frontend/base/iot-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iot-frontend
    app.kubernetes.io/part-of: manuela
  name: iot-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: iot-frontend
    deploymentconfig: iot-frontend
  sessionAffinity: None
  type: ClusterIP
