manuela/components/apps/iot-frontend/base/iot-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: iot-frontend
    app.kubernetes.io/part-of: manuela
  name: iot-frontend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: iot-frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
